Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3900

CPU_AFFINITY is no longer get set from kernel 2.6.32

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.5.0
    • None
    • None
    • 3
    • 10224

      set_cpus_allowed_ptr replaced set_cpus_allowed in v2.6.32. and set_cpus_allowed defined only CONFIG_CPUMASK_OFFSTACK=n which by default CONFIG_CPUMASK_OFFSTACK=y

      This result in CPU_AFFINITY check in lnet failed

            mdiep Minh Diep - TLC
            mdiep Minh Diep - TLC
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: