LU-3900 autoconf: use set_cpus_allowed_ptr for CPU_AFFINITY

Starting 2.6.32 kernel, set_cpus_allowed only set when
CONFIG_CPUMASK_OFFSTACK=n, so we will use set_cpus_allowed_ptr to
define CPU_AFFINITY

Signed-off-by: Minh Diep <minh.diep@intel.com>
Change-Id: I20d4bb2d620d877aadfb042757fd53cc122ee03a
Reviewed-on: http://review.whamcloud.com/7582
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Reviewed-by: James Simmons <uja.ornl@gmail.com>
Reviewed-by: Liang Zhen <liang.zhen@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>